# aruco_to_apriltag

./: CMakeLists.txt  README.md  package.xml
launch/: aruco_detect_to_apriltag.launch  aruco_detect_trisect.launch
scripts/: aruco_to_apriltag_node.py  extract_tags.ipynb  extract_tags.py
