<package format="2">
  <name>aruco_to_apriltag</name>
  <version>0.0.0</version>
  <description>Converts ArUco detections (of type FiducialTransformArray and FiducialArray) to AprilTag detections (of type ApriltagArrayStamped).</description>
  <maintainer email="anand272@uw.edu">Anand Sekar</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>apriltag_ros</build_depend>
  <build_depend>aruco_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>apriltag_ros</build_export_depend>
  <build_export_depend>aruco_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>aruco_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>aruco_detect</build_depend> 
  <exec_depend>aruco_detect</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
